# lektor

./: README.md
lektor-lib/: lektor-lib.cabal
lektor-lib/Text/: Lektor.hs
lektor-rss/: lektor-rss.cabal
lektor-rss/src/: Atom.hs  Lektor.hs  Main.hs
util/: simple-show.sh  timekeeper.sh
