name:                   lektor-rss
version:                0.0.0
author:                 Getty Ritter<gettylefou@gmail.com>
maintainer:             Getty Ritter<gettylefou@gmail.com>
license:                BSD3
license-file:           LICENSE
-- synopsis:
-- description:
cabal-version:          >= 1.10
build-type:             Simple

executable lektor-rss
  hs-source-dirs:       src
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -Wall
  build-depends:        base >= 4 && < 5, feed, HTTP, SHA, xml, bytestring, directory, filepath, hostname, time, unix

source-repository head
  type:                 git
--  Location:
